feat(dev): enable audit logs for account-service

--- a/dev/account-deployment.yaml
+++ b/dev/account-deployment.yaml
@@ -11,5 +11,5 @@ spec:
         image: bankapp/account:latest
         env:
         - name: ENABLE_AUDIT_LOGS
-          value: "false"
+          value: "true"
 
