dev: enable transaction audit logging

--- a/dev/transaction-deployment.yaml
+++ b/dev/transaction-deployment.yaml
@@ -19,4 +19,5 @@ spec:
         env:
         - name: DB_TIMEOUT
           value: "100"
-
+        - name: ENABLE_TX_AUDIT
+          value: "true"
