--- a/prod/transaction-deployment.yaml
+++ b/prod/transaction-deployment.yaml
@@ -19,4 +19,5 @@ spec:
         env:
         - name: DB_TIMEOUT
           value: "3000"
-
+        - name: ENABLE_TX_AUDIT
+          value: "true"
